docs: rewrite root README with domain catalog, add ko locale, diagrams, coverage matrix
Closes #90, #89, #92

- README.md: full rewrite with 6-domain catalog (Basic/Advanced modules,
  bluetape4k lib mapping, infra, difficulty, run commands, learning outcomes)
- README.ko.md: Korean locale counterpart of README.md
- docs/assets/CONVENTIONS.md: naming/format/tooling conventions for all
  visual assets (diagrams, charts) in the repository
- docs/images/readme-diagrams/root-readme-architecture.md: Mermaid source
  for root architecture overview (graph TD) and C4Context diagram
- docs/coverage-matrix.md: bluetape4k library → existing example → gap →
  proposed Basic/Advanced scenario matrix covering 30 libs across 7 domains